# everything_linux

./: CMakeLists.txt  EverythingForLinux.pro  README.md
include/: mainwindow.h  traymenu.h
release/: everything_linux  everything_updatedb
resource/: res.qrc
src/: csqlquerymodel.cpp  ctableview.cpp  main.cpp  mainwindow.cpp  traymenu.cpp
